				Dear Emacs, please make this -*-Text-*- mode!
	**************************************************
	*						 *
	*	       0.90 SERIES NEWS			 *
	*						 *
	**************************************************

		CHANGES IN R VERSION 0.90.1


NEW FEATURES

    o	demo(nlm) has examples of using analytical gradients and
        Hessians.


BUG FIXES

    o  segfault in rbind of a vector without names fixed. cbind, too.


		CHANGES IN R VERSION 0.90.0

NEW FEATURES

    o	packages splines (for regression smoothing splines or
	interpolating splines) and nls (nonlinear least squares) are
	part of the base distribution.

    o	New error handling using
	options ( error = expression(..) ,  warning.expr = ... ).
	REPLACING version 0.65.1's  options(error.halt = T/F)

    o	collected warnings before an error are no longer lost but
	are printed after the error message (unless the error makes
	this impossible).

    o	A couple of substantial graphics changes, esp. in the X11
	driver. The scaling of symbols is now linear in cex=, rather
	than being tied to the available font's size. The fonts on an
	X11 device also scale linearly with cex= insofar as your X
	server can do it. On systems with the scalable type 1
	PostScript fonts installed, this looks particularly nice. Note
	that the scaling is linear in the *diameter*, but quadratic in
	area. The distance between lines of margin text in the X11
	device is now proportional to the size given to
	x11(pointsize).


    o	abline(a,b) now (again) refers to transformed coordinates on
	plots with log-axes, so that abline(lm(log10(y)~log10(x)))
	(say) draws a best-fitting line on a log-log plot. The earlier
	convention (to draw a curve representing a line in original
	coordinates) is available using a new untf= argument.

    o	barplot.default() has new `axisnames' (and `sub') arguments, easily
	allowing suppression of bar labeling.

    o	cbind() and rbind() now actually do what deparse.level=1 implies: