@@ -16,8 +16,9 @@ Platform()
 }
 \value{
   \code{.Platform} is list with at least the following components:
-  \item{OS.type}{character, giving the \bold{O}perating \bold{S}sytem
-    (family) of the computer.}
+  \item{OS.type}{character, giving the \bold{O}perating \bold{S}ystem
+    (family) of the computer.  One of the following values is returned:
+  \code{"unix"},  \code{"mac"}, or  \code{"windows"} (in historical order).}
   \item{file.sep}{character, giving the \bold{file} \bold{sep}arator,
     used on your platform, e.g., \code{"/"} on Unix alikes.
   }
@@ -28,7 +29,7 @@ Platform()
 }
 \seealso{\code{\link{system}} for invoking platform specific system commands.}
 \examples{
-if(.Platform$ OS.type == "Unix") {
+if(.Platform$ OS.type == "unix") {
    system.test <- function(...) { system(paste("test", ...)) == 0 }
    dir.exists <- function(dir) sapply(dir, function(d)system.test("-d", d))
    dir.exists(c(R.home(), "/tmp", "~", "/NO"))# > T T T F
